# 2runner

./: .gitignore  2runner.py  README.md  pyproject.toml  workflow_example.yaml
tworunner/: cli.py  main.py
