[tool.poetry]
name = "tworunner"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.scripts]
2runner = "tworunner.cli:main"


[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
